feat: Update progress service by removing unused RabbitMQ queues, adding validation, and refactoring methods for better clarity and efficiency